images added,format1 half done

--- a/results/templates/convert.html
+++ b/results/templates/convert.html
@@ -191,7 +191,7 @@
                                 >5</span
                             >
                             <div class="flex flex-col">
-                                <span> Fromat Number </span>
+                                <span> Format Number </span>
                                 <span class="text-xl"></span>
                             </div>
                         </div>
